<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    tools:context=".view.activity.RegisterActivity">

    <ImageView
        android:id="@+id/storyAppLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/storyapp_logo_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/name_text_view"
        android:textSize="20sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintTop_toBottomOf="@id/storyAppLogo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp" />

    <com.example.mystoryapp.view.customview.NameEditText
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/email_text_view"
        android:textSize="20sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp" />

    <com.example.mystoryapp.view.customview.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/password_text_view"
        android:textSize="20sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp" />

    <com.example.mystoryapp.view.customview.PassEditText
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_register_text"
        android:fontFamily="@font/intermedium"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <TextView
        android:id="@+id/to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/to_login"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/interregular"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>